<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>dev.mccue</groupId>
        <artifactId>log-parent</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>
    <artifactId>log.alpha.main</artifactId>

    <properties>
        <maven.deploy.skip>true</maven.deploy.skip>
    </properties>

    <dependencies>
        <dependency>
            <groupId>dev.mccue</groupId>
            <artifactId>log.alpha</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.mccue</groupId>
            <artifactId>log.alpha.cloudwatch</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.mccue</groupId>
            <artifactId>log.alpha.generate</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.mccue</groupId>
            <artifactId>log.alpha.simplejsonlogger</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>18</source>
                    <target>18</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

        </plugins>
    </build>
</project>